--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@
     --clr-black-solid: hsl(0,0%,0%);
     --clr-black-transparent: 0, 0, 0;
     --clr-grey-border: hsl(220,13%,91%);
-    --clr-green-btn: hsl(92.4,20.4%,35.5%);
+    --clr-btn: rgb(232, 172, 171);
 
     /* Typograhy */
     --ff-Poppins: 'Poppins', sans-serif;
