--- a/assets/sass/layout/_base.scss
+++ b/assets/sass/layout/_base.scss
@@ -12,7 +12,7 @@
 /* General Styling */
 body {
     font-family: var(--ff-Poppins);
-    font-weight: var(--fw-semibold-600);
+    font-weight: var(--fw-regular-400);
     min-height: 100vh;
     background-color: rgba(rgb(255, 229, 180), 0.8);
 }
