--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,11 +108,13 @@ body {
   background-color: rgba(255, 229, 180, 0.8);
 }
 
+/* Card Container Styling */
 .card__container {
   display: grid;
   place-content: center;
 }
 
+/* Card Image & Content Styling */
 .card__img {
   background-image: url(/images/background.jpg);
   background-position: right 60%;
@@ -126,6 +128,7 @@ body {
   gap: 0.5rem;
   flex-direction: column;
   align-items: center;
+  /* Anchor Text Hover & Coffee Icon Styling */
 }
 .card__img-content a {
   color: hsl(0, 0%, 100%);
@@ -141,6 +144,7 @@ body {
   width: 4.375rem;
 }
 
+/* Text Contents Styling */
 .card__contents {
   display: grid;
 }
@@ -154,6 +158,7 @@ body {
   color: rgba(var(--clr-black-transparent), 0.8);
 }
 
+/* Form Styling */
 .card__form {
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.5);
@@ -177,6 +182,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
+  /* Valid & Invalid Input Styling */
 }
 .form input:focus {
   border: 2px solid #e5e7eb;
@@ -189,6 +195,7 @@ body {
   border-color: green;
 }
 
+/* Sign-up Button & Login Styling */
 .card__button {
   align-self: center;
   color: white;
@@ -201,6 +208,7 @@ body {
   box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.5);
   transition: all 250ms ease-in-out;
   cursor: pointer;
+  /* Button Hover Styling */
 }
 .card__button:hover {
   transform: scale(1.1);
@@ -217,29 +225,29 @@ body {
   font-weight: var(--fw-semibold-600);
 }
 
+/* Desktop Responsivness */
 @media screen and (min-width: 67.5rem) {
   /* Card Container Styling */
   .card__container {
     grid-template-columns: 1fr 1.9fr;
   }
-  /* Card Image Styling */
+  /* Card Image & Content Styling */
   .card__img {
     background-position: left;
     max-width: 35vw;
     min-height: 100vh;
   }
-  /* Card Image Content Styling */
   .card__img-content {
     flex-direction: row;
     gap: 1rem;
     margin-top: 3rem;
     margin-left: 5rem;
-    /* Card Image Anchor Styling */
+    /* Anchor Text Hover Styling */
   }
   .card__img-content a {
     font-size: 2.5rem;
   }
-  /* Card Contents Styling */
+  /* Text Contents Styling */
   .card__contents {
     display: flex;
     flex-direction: column;
@@ -251,6 +259,7 @@ body {
     max-width: 60rem;
     font-size: 1.5rem;
   }
+  /* Form Styling */
   .card__form {
     align-items: start;
   }
@@ -261,6 +270,7 @@ body {
     gap: 4rem;
     margin-bottom: 1rem;
   }
+  /* Sign-up Button & Login Styling */
   .card__button {
     align-self: self-start;
     padding: 0.9rem;
